[package]
name = "markdown2json"
version = "0.1.0"
edition = "2024"
authors = ["Hamid Alavi Toussi"]
license = "MIT"
repository = "https://github.com/jslambda/markdown-indexer"
description = "Reads a markdown file or directory of markdown documents and emits a structured JSON"

[dependencies]
markdown = "1.0.0"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
